# Fastapi-

./: .cursorrules  .env.development  .gitignore  Dockerfile  Dockerfile.celery  README.md  celery_worker.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  run.py
app/: __init__.py  main.py
app/admin/: __init__.py  config.py
app/admin/routers/: __init__.py  dashboard.py
app/admin/views/: dashboard.py  user_admin.py
app/api/v1/: __init__.py  health.py
app/core/: __init__.py  base.py  celery_app.py  exception_handlers.py  exceptions.py  init_db.py  tasks.py
app/core/agents/: base_agent.py
app/core/config/: __init__.py  base.py  development.py  production.py  settings.py  test.py
app/core/database/: __init__.py  deps.py  session.py  supabase.py
app/core/middlewares/: __init__.py  auth_middleware.py  logging_middleware.py
app/core/repositories/: __init__.py  base.py  supabase_base.py
app/core/routers/: __init__.py  base.py
app/core/schemas/: __init__.py  base.py
app/core/services/: __init__.py  base.py
app/core/utils/: __init__.py  common.py  security.py
app/users/: __init__.py  dependencies.py
app/users/models/: __init__.py  user.py
app/users/repositories/: __init__.py  supabase_user_repository.py  user_repository.py
app/users/routers/: __init__.py  supabase_auth.py  supabase_users.py  user_router.py
app/users/schemas/: __init__.py  user.py
app/users/services/: __init__.py  user_service.py  (+1 more)
docs/: supabase_guide.md
migrations/: env.py
nginx/conf/: app.conf
nginx/ssl/: README.md
scripts/: create_supabase_tables.sql
(+3 files in other folders)
